--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,11 @@ env:
         - SNIFF="1"                       # Should we run code sniffer on your code?
         - IMAGE_ICC="1"                   # Should we run icc profile sniffer on your images?
         - EPV="1"                         # Should we run EPV (Extension Pre Validator) on your code?
-        - PHPBB_BRANCH="3.2.x"
+        - PHPBB_BRANCH="3.3.x"
 
 branches:
   only:
+    - master
     - develop
     - /^develop-.*$/
     - /^\d+(\.\d+)?\.x$/
