--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "david63/resetregdate",
 	"type": "phpbb-extension",
 	"description": "Adds an Admin option to reset a user's registration date.",
-	"version": "2.1.0-rc2",
+	"version": "2.1.0-RC2",
 	"time": "2019-05-12",
 	"license": "GPL-2.0-only",
 	"authors": [{
@@ -15,7 +15,7 @@
         "composer/installers": "~1.0"
     },
 	"extra": {
-		"display-name": "[-] Reset registration date",
+		"display-name": "[*] Reset registration date",
 		"soft-require": {
 			"phpbb/phpbb": ">=3.2.2"
     	},
