--- a/config/services.yml
+++ b/config/services.yml
@@ -1,3 +1,6 @@
+imports:
+    - { resource: phpbb_tables.yml }
+
 services:
     david63.resetregdate.admin.controller:
         class: david63\resetregdate\controller\admin_controller
@@ -10,3 +13,10 @@ services:
             - '@language'			
             - '%core.root_path%'
             - '%core.php_ext%'
+            - '@david63.resetregdate.core.functions'
+            - '%tables%'
+
+    david63.resetregdate.core.functions:
+        class: david63\resetregdate\core\functions
+        arguments:
+            - '@ext.manager'
