--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         "composer/installers": "~1.0"
     },
 	"extra": {
-		"display-name": "[*] Reset registration date",
+		"display-name": "[**] Reset registration date",
 		"soft-require": {
 			"phpbb/phpbb": ">=3.3.0"
     	},
 		"version-check": {
         	"host": "version.phpbbdev.space",
-        	"directory": "/3.3",
-        	"filename": "/reset_reg_date_version_file.json"
+        	"directory": "/versions",
+        	"filename": "reset_reg_date_version_file.json",
+			"ssl": false
     	}
 	}
 }
